# openapi.yaml
@@ -24,30 +24,17 @@ paths:
             summary: Načíst dny
             operationId: getDny
             parameters:
-                - name: pageSize
-                  in: query
-                  description: velikost stránky
-                  required: false
-                  style: form
-                  explode: true
-                  schema:
-                      type: integer
-                - name: pageNumber
-                  in: query
-                  description: stránka
-                  required: false
-                  style: form
-                  explode: true
-                  schema:
-                      type: integer
+                - $ref: "#/components/paramaters/pageSize"
+                - $ref: "#/components/paramaters/pageNumber"
+
             responses:
-                '200':
+                "200":
                     description: okey dokey
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/den'
-                '401':
+                                $ref: "#/components/schemas/den"
+                "401":
                     description: uživatel není přihlášení
             security:
                 - kal_auth:
@@ -59,19 +46,19 @@ paths:
             summary: Aktualizovat den
             operationId: updateDen
             requestBody:
-                $ref: '#/components/requestBodies/den'
+                $ref: "#/components/requestBodies/den"
             responses:
-                '200':
+                "200":
                     description: okey dokey
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/den'
-                '400':
+                                $ref: "#/components/schemas/den"
+                "400":
                     description: JSON není validní
-                '401':
+                "401":
                     description: uživatel není přihlášení
-                '404':
+                "404":
                     description: ID nenalezeno
             security:
                 - kal_auth:
@@ -83,13 +70,13 @@ paths:
             summary: Přidat den
             operationId: addDen
             requestBody:
-                $ref: '#/components/requestBodies/den'
+                $ref: "#/components/requestBodies/den"
             responses:
-                '200':
+                "200":
                     description: okey dokey
-                '400':
+                "400":
                     description: JSON není validní
-                '401':
+                "401":
                     description: uživatel není přihlášení
             security:
                 - kal_auth:
@@ -102,24 +89,17 @@ paths:
             summary: Najdi den dle datumu
             operationId: getDenByDatum
             parameters:
-                - name: datum
-                  in: path
-                  description: datum
-                  required: true
-                  style: simple
-                  explode: false
-                  schema:
-                      $ref: '#/components/schemas/den/datum'
+                - $ref: "#/components/parameters/datum"
             responses:
-                '200':
+                "200":
                     description: okey dokey
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/den'
-                '401':
+                                $ref: "#/components/schemas/den"
+                "401":
                     description: uživatel není přihlášení
-                '404':
+                "404":
                     description: ID nenalezeno
             security:
                 - kal_auth:
@@ -132,24 +112,17 @@ paths:
             summary: Vypiš poslední chat pro přehled
             operationId: getLastChatInDay
             parameters:
-                - name: datum
-                  in: path
-                  description: datum
-                  required: true
-                  style: simple
-                  explode: false
-                  schema:
-                      $ref: '#/components/schemas/den/datum'
+                - $ref: "#/components/parameters/datum"
             responses:
-                '200':
+                "200":
                     description: okey dokey
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/chat'
-                '401':
+                                $ref: "#/components/schemas/chat"
+                "401":
                     description: uživatel není přihlášení
-                '404':
+                "404":
                     description: ID nenalezeno
             security:
                 - kal_auth:
@@ -162,24 +135,18 @@ paths:
             summary: Vypiš všechny chaty pro kartu
             operationId: getChatyByDatumDne
             parameters:
-                - name: datum
-                  in: path
-                  description: datum
-                  required: true
-                  style: simple
-                  explode: false
-                  schema:
-                      $ref: '#/components/schemas/den/datum'
+                - $ref: "#/components/parameters/datum"
+
             responses:
-                '200':
+                "200":
                     description: okey dokey
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/chaty'
-                '401':
+                                $ref: "#/components/schemas/chaty"
+                "401":
                     description: uživatel není přihlášení
-                '404':
+                "404":
                     description: ID nenalezeno
             security:
                 - kal_auth:
@@ -192,21 +159,21 @@ paths:
             summary: Aktualizovat chat
             operationId: updateChat
             requestBody:
-                $ref: '#/components/requestBodies/chat'
+                $ref: "#/components/requestBodies/chat"
             responses:
-                '200':
+                "200":
                     description: okey dokey
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/chat'
-                '400':
+                                $ref: "#/components/schemas/chat"
+                "400":
                     description: JSON není validní
-                '401':
+                "401":
                     description: uživatel není přihlášení
-                '404':
+                "404":
                     description: ID nenalezeno
-                '405':
+                "405":
                     description: chat nelze zprocesovat, denID neexisuje
             security:
                 - kal_auth:
@@ -218,13 +185,13 @@ paths:
             summary: Vlož chat pro daný den
             operationId: postChatByDenId
             requestBody:
-                $ref: '#/components/requestBodies/chat'
+                $ref: "#/components/requestBodies/chat"
             responses:
-                '200':
+                "200":
                     description: okey dokey
-                '401':
+                "401":
                     description: uživatel není přihlášení
-                '405':
+                "405":
                     description: chat nelze zprocesovat, denID neexisuje
             security:
                 - kal_auth:
@@ -236,24 +203,17 @@ paths:
             summary: Smaž chat dle Id
             operationId: deleteChatById
             parameters:
-                - name: id
-                  in: path
-                  description: Id které používáme
-                  required: true
-                  style: simple
-                  explode: false
-                  schema:
-                      $ref: '#/components/schemas/id'
+                - $ref: "#/components/parameters/id"
             responses:
-                '200':
+                "200":
                     description: okey dokey
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/chat'
-                '401':
+                                $ref: "#/components/schemas/chat"
+                "401":
                     description: uživatel není přihlášení
-                '404':
+                "404":
                     description: ID nenalezeno
             security:
                 - kal_auth:
@@ -267,24 +227,17 @@ paths:
             summary: Najdi chat dle denid
             operationId: getChatByDenId
             parameters:
-                - name: denid
-                  in: path
-                  description: chaty dle denid
-                  required: true
-                  style: simple
-                  explode: false
-                  schema:
-                      $ref: '#/components/schemas/chat/denid'
+                - $ref: "#/components/parameters/denid"
             responses:
-                '200':
+                "200":
                     description: okey dokey
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/chaty'
-                '401':
+                                $ref: "#/components/schemas/chaty"
+                "401":
                     description: uživatel není přihlášení
-                '404':
+                "404":
                     description: ID nenalezeno
             security:
                 - kal_auth: [read]
@@ -295,24 +248,17 @@ paths:
             summary: Najdi chat dle id
             operationId: getChatById
             parameters:
-                - name: id
-                  in: path
-                  description: chaty dle id
-                  required: true
-                  style: simple
-                  explode: false
-                  schema:
-                      $ref: '#/components/schemas/id'
+                - $ref: "#/components/parameters/id"
             responses:
-                '200':
+                "200":
                     description: okey dokey
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/chat'
-                '401':
+                                $ref: "#/components/schemas/chat"
+                "401":
                     description: uživatel není přihlášení
-                '404':
+                "404":
                     description: ID nenalezeno
             security:
                 - kal_auth: [read]
@@ -331,7 +277,7 @@ components:
             type: object
             properties:
                 id:
-                    $ref: '#/components/schemas/id'
+                    $ref: "#/components/schemas/id"
                 kdo:
                     type: string
                     description: kdo má ušáka
@@ -373,7 +319,7 @@ components:
             type: object
             properties:
                 id:
-                    $ref: '#/components/schemas/id'
+                    $ref: "#/components/schemas/id"
                 datum:
                     type: string
                     description: datum a čas chatu
@@ -397,11 +343,11 @@ components:
         dny:
             type: array
             items:
-                $ref: '#/components/schemas/den'
+                $ref: "#/components/schemas/den"
         chaty:
             type: array
             items:
-                $ref: '#/components/schemas/chat'
+                $ref: "#/components/schemas/chat"
     responses:
         unauthorized:
             description: uživatel není přihlášení
@@ -420,7 +366,16 @@ components:
             style: simple
             explode: false
             schema:
-                $ref: '#/components/schemas/id'
+                $ref: "#/components/schemas/id"
+        datum:
+            name: datum
+            in: path
+            description: datum podle ktereho hledame
+            required: true
+            style: simple
+            explode: false
+            schema:
+                $ref: "#/components/schemas/den/datum"
         denid:
             name: denid
             in: path
@@ -429,7 +384,7 @@ components:
             style: simple
             explode: false
             schema:
-                $ref: '#/components/schemas/chaty/denid'
+                $ref: "#/components/schemas/chaty/denid"
 
         pageSize:
             name: pageSize
@@ -454,18 +409,18 @@ components:
             content:
                 application/json:
                     schema:
-                        $ref: '#/components/schemas/den'
+                        $ref: "#/components/schemas/den"
             required: true
         chat:
             content:
                 application/json:
                     schema:
-                        $ref: '#/components/schemas/chat'
+                        $ref: "#/components/schemas/chat"
             required: true
     securitySchemes:
         kal_auth:
             type: oauth2
             flows:
                 authorizationCode:
-                    authorizationUrl: 'https://accounts.google.com/o/oauth2/v2/auth'
-                    tokenUrl: 'https://www.googleapis.com/oauth2/v4/token'
+                    authorizationUrl: "https://accounts.google.com/o/oauth2/v2/auth"
+                    tokenUrl: "https://www.googleapis.com/oauth2/v4/token"
